--- a/src/app/posts/33.md
+++ b/src/app/posts/33.md
@@ -6,17 +6,17 @@ author: 'João Leal Amado'
 section: 'Contra-reforma laboral'
 ---
 
-**O anteprojecto governamental de reforma das leis laborais, autodenominado Trabalho XXI, vem sabotar o que vinha a ser feito em matéria de contratação coletiva, destruindo os equilíbrios logrados pelas anteriores reformas legais. Para o legislador deste anteprojeto “dinamizar a contratação coletiva” consiste afinal em facilitar a morte da convenção coletiva de trabalho.**
+*O anteprojecto governamental de reforma das leis laborais, autodenominado Trabalho XXI, vem sabotar o que vinha a ser feito em matéria de contratação coletiva, destruindo os equilíbrios logrados pelas anteriores reformas legais. Para o legislador deste anteprojeto “dinamizar a contratação coletiva” consiste afinal em facilitar a morte da convenção coletiva de trabalho.*
 
 Até quando vigora uma convenção coletiva? Como é que a lei regula o âmbito temporal dessa “lei negociada” que é a convenção coletiva de trabalho? Durante muitos anos, até à aprovação do Código do Trabalho (CT) de 2003, a resposta da nossa lei era a de que a convenção coletiva se manteria indefinidamente em vigor, até ser substituída por um novo instrumento de regulamentação coletiva de trabalho. Consagrava-se, portanto, o chamado “princípio da perenidade” ou “princípio da continuidade” do ordenamento coletivo laboral, que se credenciava na conveniência de prevenir vazios normativos. A lei tinha horror ao vácuo regulativo e, daí, a convenção coletiva só deixaria de vigorar se e quando surgisse uma nova convenção que ocupasse o seu lugar, substituindo-a.
 
-*Precariedade em lugar de perenidade*
+**Precariedade em lugar de perenidade**
 
 No século XXI, com a aprovação do CT de 2003, primeiro, e do CT de 2009, depois, a solução para este problema mudou radicalmente. Hoje em dia, o art. 499.º do CT, relativo à vigência e renovação da convenção, perspetiva esta última como um “contrato-lei” que, embora tendo prazo de vigência, não se destina a caducar, mas sim a perdurar no tempo, renovando-se sucessivamente. Contudo, a lei permite a denúncia unilateral (isto é, a oposição à renovação) da convenção, no art. 500.º. Havendo denúncia, a convenção manter-se-á em regime de sobrevigência, durante um certo período temporal – um período destinado à negociação entre as partes, que, a traço grosso, perdurará, no mínimo, por 12 meses e, no máximo, por 18 meses. Decorrido esse período de sobrevigência sem que a negociação culmine em acordo, a convenção coletiva caducará, suscitando aquilo que o especialista em Direito do Trabalho Jorge Leite (1939-2019) bem qualificou como “a angústia do dia seguinte”.
 Em suma, após o CT de 2003, em lugar de perenidade, precariedade do ordenamento coletivo, em lugar da continuidade, descontinuidade. A sombra da caducidade tem, inequivocamente, enfraquecido a posição negocial dos trabalhadores nesta sede, sendo desde então reclamadas novas soluções. Talvez por isso, o legislador veio a engendrar um novo paliativo, através da Lei n.º 93/2019, tendo criado uma nova modalidade de arbitragem nesta matéria, a “arbitragem para a suspensão do período de sobrevigência e mediação”, cujo regime jurídico consta do art. 501.º-A do CT. Com efeito, ao abrigo dessa norma, qualquer das partes pode requerer ao presidente do Conselho Económico e Social (CES), no período entre 90 e 60 dias antes do decurso do período de sobrevigência, a referida arbitragem para a suspensão do período de sobrevigência e mediação pelo árbitro presidente. Esta arbitragem tem por objeto a verificação da existência de probabilidade séria de as partes chegarem a acordo para a revisão parcial ou total da convenção coletiva, sendo que o tribunal arbitral, caso entenda que existe probabilidade séria de as partes chegarem a acordo, determina a suspensão do período de sobrevigência (por um prazo não superior a quatro meses) e remete a negociação para mediação, podendo fixar o seu objeto.
 Ou seja, trata-se de mais uma medida legislativa tendente a dilatar o período de sobrevigência da convenção, com a entrada em cena de um mediador que tentará ajudar a superar as dificuldades negociais sentidas pelas partes. Em qualquer caso, as partes continuam, aqui, a deter as rédeas do processo, pois o mediador apenas pode propor, não pode impor, apenas pode persuadir, não pode decidir. Daí que, se uma das partes estiver determinada a não chegar a acordo e a não rever a convenção, essa postura será inultrapassável e a convenção acabará mesmo por caducar, sem ser substituída por outro instrumento de regulamentação coletiva de trabalho. Um mero paliativo, portanto.
 
-*Agenda do trabalho digno*
+**Agenda do trabalho digno**
 
 Entretanto, e a este propósito, vale a pena atentar no conteúdo da Lei 13/2023 – a chamada “agenda do trabalho digno” –, na qual se previram alterações bastante relevantes nesta matéria. As alterações introduzidas consistiram, no essencial, em dois aspetos:
 i) Em conferir real obrigatoriedade à fundamentação da denúncia da convenção coletiva, passando a prever que essa fundamentação seja sindicada por uma entidade independente, isto é, por um tribunal arbitral, sendo que, caso esse tribunal conclua pela improcedência da fundamentação da denúncia, esta não produzirá efeitos (art. 500.º-A);
@@ -26,7 +26,7 @@ i) em caso de denúncia de convenção coletiva, a parte destinatária da denún
 ii) o requerimento de arbitragem suspende os efeitos da denúncia, impedindo a convenção de entrar em regime de sobrevigência; 
 iii) a declaração de improcedência da fundamentação da denúncia, pelo tribunal arbitral, determina que a mesma não produz efeitos.
 
-*Convenção coletiva vs. decisão arbitral*
+**Convenção coletiva vs. decisão arbitral**
 
 Vale dizer, a convenção coletiva, ainda que tenha um prazo de vigência, está longe de ser livremente denunciável por iniciativa unilateral de qualquer das partes. Na verdade, para que essa denúncia produza efeitos, ela necessita de ser uma denúncia construtiva, isto é, ela carece de ser acompanhada de uma proposta negocial global, por parte da entidade denunciante. E, a mais disso, a denúncia carece de ser fundamentada, isto é, carece de se estribar em motivos de ordem económica, estrutural ou em desajustamentos do regime da convenção denunciada, os quais passaram a ser externamente sindicáveis, por uma entidade terceira e independente, entidade que pode, inclusive, neutralizar os efeitos da denúncia efetuada, se concluir pela improcedência dos fundamentos invocados.
 Por outro lado, e talvez com maior importância regimental e prática, ao passo que, antes, o período de sobrevigência iria conduzir fatalmente, na falta de acordo entre as partes, à caducidade da convenção, a Lei 13/2023 introduziu uma significativa alteração (dir-se-ia: uma alteração qualitativa) neste domínio, visto que atribuiu a qualquer das partes, máxime ao sindicato, o direito de, verificados determinados pressupostos, evitar a caducidade da convenção (rectius, evitar o vazio regulativo subsequente à caducidade), requerendo, para esse efeito, a arbitragem necessária. Ora, esta alteração não é de somenos, dado que a arbitragem necessária se encontrava  disciplinada no CT, nos arts. 510.º e 511.º, mas só era admitida caso se tivesse já verificado a caducidade de uma convenção coletiva e não fosse celebrada nova convenção nos 12 meses subsequentes. Só depois disso qualquer das partes poderia requerer a arbitragem, dispondo, para o efeito, de mais 12 meses. Ou seja, esta arbitragem surgia, cronologicamente, já bem depois de a convenção coletiva ter caducado, ao passo que a alteração normativa introduzida pela Lei 13/2023 prevê que a arbitragem surja antes, durante o período de sobrevigência da convenção. O que, convenhamos, muda muito, muda quase tudo.
@@ -34,19 +34,19 @@ Por outro lado, e talvez com maior importância regimental e prática, ao passo 
 A convenção coletiva detém, seguramente, a primazia, pois é através dela que os trabalhadores exercem o seu direito fundamental à contratação coletiva. Ainda assim, a decisão arbitral surge aqui como um interessante sucedâneo da contratação coletiva, como um expediente apto a superar a falta de acordo, a evitar a caducidade da convenção e o vazio regulativo. De resto, a própria OIT não tem deixado de frisar que, a despeito do caráter voluntário da negociação coletiva, a arbitragem obrigatória/necessária, determinada por autoridades públicas, pode revelar-se aceitável e justificada, em ordem a resolver um impasse que persista depois de “negociações prolongadas e infrutuosas”. 
 A arbitragem necessária surge, assim, como sucedâneo da convenção coletiva e como alternativa ao vazio subsequente à respetiva caducidade. Crê-se, de resto, que o facto de a decisão arbitral ser tomada por um colégio de árbitros cuja identidade não é, a priori, integralmente conhecida das associações sindicais e patronais, acabará por funcionar, na prática, como um forte incentivo à obtenção de um acordo por parte dos sujeitos coletivos ─ justamente por saberem que a falta de acordo não desembocará, inevitavelmente, na caducidade da convenção, mas sim, porventura, numa decisão arbitral que substituirá e produzirá os mesmos efeitos da convenção coletiva, decisão tomada por sujeitos que eles ainda não conhecem e cujo sentido é, para eles, uma incógnita. Neste contexto, as duas partes talvez optem por continuar e aprofundar, elas mesmas, o processo negocial, não se expondo a que o recurso à arbitragem seja acionado por alguma delas. É que, note-se, após ter sido requerida a arbitragem, as partes perdem o controlo do processo, tendo que se sujeitar ao que vier a ser decidido pelo colégio arbitral, concordem ou não com o teor da decisão...  
 
-*A válvula de escape do recurso à arbitragem*
+**A válvula de escape do recurso à arbitragem**
 
 Para as associações sindicais, em particular, esta solução permite, em muitos casos, afugentar o espectro da caducidade das convenções coletivas, com o inerente vazio regulativo. Com este enquadramento normativo, o sindicato sabe que, se não conseguir alcançar um acordo com a entidade ou associação empregadora, no sentido de rever a convenção coletiva (sobre)vigente, pelo menos sempre lhe restará a válvula de escape do recurso à arbitragem, continuando a convenção a aplicar-se até que seja proferida a decisão arbitral. E esta tomará o lugar da convenção revista, sem vazios normativos, sem a “angústia do dia seguinte” que tanto tem pressionado o movimento sindical, em sede negocial, desde 2003.
 Em todo o caso, convém registar que esta possibilidade de remeter a questão para arbitragem necessária, evitando que a convenção coletiva caduque sem ser substituída por outro instrumento de regulamentação coletiva de trabalho, depende da verificação de certos pressupostos. Com efeito, esta possibilidade de qualquer das partes requerer a arbitragem necessária só existe, nos termos da lei, caso a negociação não seja remetida para mediação, nos termos do disposto no n.º 4 do art. 501.º-A, ou, nas situações em que haja mediação, caso esta se conclua sem acordo quanto à revisão da convenção coletiva. O que, por seu turno, implica que tenha sido previamente requerida arbitragem para suspensão do período de sobrevigência da convenção, nos termos do n.º 1 do art. 501.º-A do CT. Esta arbitragem, que pode ser requerida por qualquer das partes ao presidente do CES, no período entre 90 e 60 dias antes do decurso do período de sobrevigência da convenção, tem por objeto a verificação da existência de probabilidade séria de as partes chegarem a acordo para a revisão parcial ou total da convenção coletiva, sendo que, caso o tribunal entenda que essa probabilidade séria existe, será então determinada a suspensão do período de sobrevigência daquela (por um prazo não superior a quatro meses) e remetida a negociação para mediação, a qual será assegurada pelo árbitro que presidiu ao tribunal arbitral.
 
-*Conciliar dois valores muito relevantes*
+**Conciliar dois valores muito relevantes**
 
 Em qualquer caso, a lei concede hoje a qualquer das partes a possibilidade de evitar o vazio normativo subsequente à caducidade da convenção sobrevigente – para o efeito, a parte em causa deverá, primeiro, requerer arbitragem para suspensão do período de sobrevigência e mediação e, depois, caso a suspensão não seja decretada e não haja lugar a mediação, ou caso a mesma seja decretada mas a mediação não resulte em acordo, requerer a arbitragem necessária, assim garantindo que a morte da convenção só ocorre após ser proferida a correspondente (e substitutiva) decisão arbitral. Sem vazios regulativos.
 Valeria a pena atentar nestas soluções. Soluções de compromisso e pragmáticas, sim, quiçá não as ideais, mas, julga-se, não irrazoáveis. Trata-se, afinal, de tentar conciliar dois valores muito relevantes nesta matéria: o valor da estabilidade dos regimes laborais, que não se compadece com situações de vazio normativo, e a dinâmica própria da contratação coletiva, marcadamente transacional e transitória.
 No anterior regime jurídico desta matéria, a resiliência da convenção coletiva passava, apenas, pelo instituto da sobrevigência. Mas qualquer das partes, se assim o desejasse, podia, através da denúncia e da subsequente falta de acordo com a contraparte, acabar por matar a convenção, fazendo-a caducar, sem que esta deixasse sucessora. Com as alterações introduzidas pela Lei 13/2023, as coisas mudaram. A resiliência da convenção coletiva passou a revelar-se, desde logo, pela dificuldade em a denunciar, isto é, pela inadmissibilidade de denúncia da convenção sem razão bastante. E, sobretudo, verificados que sejam certos pressupostos, basta que uma das partes assim o deseje para que a convenção denunciada e em sobrevigência sobreviva – até que desapareça, sim, mas só quando surgir uma decisão arbitral para tomar o seu lugar.      
 O sistema permite, assim, que qualquer das partes ─ máxime a parte trabalhadora, até porque, convém recordar, ainda que, tal como para dançar o tango, sejam precisos dois para celebrar uma convenção, o direito de contratação coletiva é um direito fundamental dos trabalhadores, não dos empregadores ─ possa requerer a arbitragem necessária se, durante o período de sobrevigência, a negociação, com ou sem mediação, vier a fracassar. O legislador deu aqui um importante passo, para que, em rigor, o trunfo da arbitragem necessária possa ser sempre usado pelo sindicato em ordem a evitar a caducidade da convenção e o subsequente vazio normativo.
 
-*Anteprojecto laboral vem sabotar o trabalho feito* 
+**Anteprojecto laboral vem sabotar o trabalho feito** 
 
 Ora, que faz, nesta matéria, o Anteprojeto governamental de reforma das leis laborais, o autodenominado “Trabalho XXI”? A despeito de alegar ser seu propósito o de dinamizar a contratação coletiva, o que é feito é, sobretudo, desfazer o que foi feito, isto é, destruir o laborioso sistema montado pela nossa lei, nos últimos anos, neste domínio: assim, nos termos do Anteprojeto, a denúncia da convenção volta a ser livre, isto é, o seu fundamento volta a deixar de ser escrutinável; revoga-se a norma sobre a arbitragem para apreciação da denúncia de convenção coletiva; revoga-se a norma relativa à arbitragem para suspensão do período de sobrevigência e mediação; suprime-se, também, a faculdade de qualquer das partes requerer a arbitragem necessária, em ordem a evitar o vazio normativo subsequente à caducidade da convenção.
 Palavras para quê? Isto não é revisitar a lei, isto é sabotar o que vinha a ser feito, assim destruindo os equilíbrios logrados, nesta matéria, por via das anteriores reformas legais. Estranhamente, o legislador do Anteprojeto parece entender que dinamizar a contratação coletiva passa por facilitar a morte, sem sucessor, da convenção coletiva de trabalho. “Rumo à caducidade, a todo o vapor!”, eis a divisa dos artífices do Anteprojeto. Uma voragem caducante que se percebe, pois não custa imaginar quem sairá beneficiado com esta opção legislativa, se ela vier a ser aprovada. O que custa entender é como é que se diz pretender dinamizar algo – a contratação coletiva –, facilitando a morte do produto desse algo – a convenção coletiva.
