--- a/src/app/posts/33.md
+++ b/src/app/posts/33.md
@@ -1,6 +1,6 @@
 ---
 title: 'O anteprojeto e a contratação coletiva'
-subtitle: ''
+subtitle: 'Uma autoestrada que termina num precipício'
 date: '2025-08-17'
 author: 'João Leal Amado'
 section: 'Contra-reforma laboral'
