--- a/src/app/posts/38.md
+++ b/src/app/posts/38.md
@@ -27,7 +27,7 @@ O novo equilíbrio procurado vem legitimar os desequilíbrios pretendidos. Para 
 
 Esse alinhamento ideológico com a visão civilista do direito do trabalho é a mãe de quase todas as medidas de contrarreforma laboral, atacando especialmente a Agenda do Trabalho Digno, que foram apresentadas à discussão pública.
 
-Para as defender o Governo está a recorrer a uma tática conhecida desde as análises do recuo do Estado Social com o governo Tatcher. Paul Pierson[1], explicou-nos que para legitimar recuos que apareceriam como inaceitáveis aos cidadãos uma das táticas era a “ofuscação”. No debate público estão já, lançados pelo Governo, dois dos seus recursos.
+Para as defender o Governo está a recorrer a uma tática conhecida desde as análises do recuo do Estado Social com o governo Tatcher. Paul Pierson[^1], explicou-nos que para legitimar recuos que apareceriam como inaceitáveis aos cidadãos uma das táticas era a “ofuscação”. No debate público estão já, lançados pelo Governo, dois dos seus recursos.
 
 Um deles é a justificação das medidas com combate a “abusos” de direitos. Ou os grevistas que abusam do direito à greve ou as mães que abusam do direito a amamentar e outros casos que ainda aparecerão. Não importa que sejam casos ultraminoritários ou isolados. Servem para distrair do essencial que é a intenção de recuo. O recuo na proteção da parentalidade, o recuo na proteção do direito à formação, o recuo no direito à greve e os outros que com eles aparecem na contrarreforma laboral.
 
@@ -35,7 +35,7 @@ O outro é a introdução de pequenos “rebuçados” que tenham alguns ganhado
 
 Aos liberais que acreditam que a solução para as relações de trabalho é o regresso ao paradigma da igualdade entre as partes não podemos deixar de recordar que essa foi a base do desastre do capitalismo liberal da segunda metade do século XIX, com as insanáveis contradições da “questão social”, o empobrecimento generalizado dos trabalhadores numa sociedade que gerava cada vez mais riqueza. Esse foi o quadro social que gerou as reações críticas de setores tão dispares quanto os movimentos socialistas de vários matizes e a doutrina social da igreja.
 
-A crítica mais acutilante que me lembro de ver escrita ao paradigma de que a anteproposta do governo se alimenta vem, aliás, de um padre dominicano francês da primeira metade do século XIX que conheceu bem a questão social, Henri Lacordaire, que a pronunciou em defesa do descanso semanal ao domingo, em favor das “vítimas da ganância pessoal e da ganância de um Patrão. É muitas vezes repetida, do domínio público, muitas vezes tem mal atribuída a sua autoria e reza assim: “entre os fortes e os fracos, entre os ricos e os pobres, entre o senhor e o servo é a liberdade que oprime e a lei que liberta”[2].
+A crítica mais acutilante que me lembro de ver escrita ao paradigma de que a anteproposta do governo se alimenta vem, aliás, de um padre dominicano francês da primeira metade do século XIX que conheceu bem a questão social, Henri Lacordaire, que a pronunciou em defesa do descanso semanal ao domingo, em favor das “vítimas da ganância pessoal e da ganância de um Patrão. É muitas vezes repetida, do domínio público, muitas vezes tem mal atribuída a sua autoria e reza assim: “entre os fortes e os fracos, entre os ricos e os pobres, entre o senhor e o servo é a liberdade que oprime e a lei que liberta”[^2].
 
 Quando a lei recua, prejudica a parte frágil da relação. É a estrada para a desproteção dos vulneráveis que a avenida liberal que o governo quer abrir. Veremos se é travado pelas instituições e pelo protesto popular ou se já somos, muitos de nós neoliberais no modo como entendemos o trabalho e esta ofensiva acabará bem-sucedida.
 
