--- a/src/app/posts/1.md
+++ b/src/app/posts/1.md
@@ -219,9 +219,4 @@ construir uma resposta a estes e aos demais desafios cruciais que temos
 pela frente nesta conjuntura nacional e internacionalmente de alarme
 para todos os defensores dos direitos de quem trabalha.
 
-[^1]: Este texto corresponde, em versão escrita, à alocução de abertura
-    da Conferência "Democracia, Trabalho e Sindicalismo", organizada
-    pelo "Abril é Agora" e pela CULTRA -- Culturas do Trabalho e do
-    Socialismo, para celebrar os 50 anos do 25 de abril e da revolução
-    portuguesa de 1974/75, que teve lugar na Galeria Geraldes da Silva,
-    no Poto, a 28 de outubro de 2023.
+*Este texto corresponde, em versão escrita, à alocução de abertura da Conferência "Democracia, Trabalho e Sindicalismo", organizada pelo "Abril é Agora" e pela CULTRA -- Culturas do Trabalho e do Socialismo, para celebrar os 50 anos do 25 de abril e da revolução portuguesa de 1974/75, que teve lugar na Galeria Geraldes da Silva, no Poto, a 28 de outubro de 2023.*
