--- a/src/app/posts/33.md
+++ b/src/app/posts/33.md
@@ -6,6 +6,8 @@ author: 'João Leal Amado'
 section: 'Contra-reforma laboral'
 ---
 
+![](/images/33.jpeg)
+
 *O anteprojecto governamental de reforma das leis laborais, autodenominado Trabalho XXI, vem sabotar o que vinha a ser feito em matéria de contratação coletiva, destruindo os equilíbrios logrados pelas anteriores reformas legais. Para o legislador deste anteprojeto “dinamizar a contratação coletiva” consiste afinal em facilitar a morte da convenção coletiva de trabalho.*
 
 Até quando vigora uma convenção coletiva? Como é que a lei regula o âmbito temporal dessa “lei negociada” que é a convenção coletiva de trabalho? Durante muitos anos, até à aprovação do Código do Trabalho (CT) de 2003, a resposta da nossa lei era a de que a convenção coletiva se manteria indefinidamente em vigor, até ser substituída por um novo instrumento de regulamentação coletiva de trabalho. Consagrava-se, portanto, o chamado “princípio da perenidade” ou “princípio da continuidade” do ordenamento coletivo laboral, que se credenciava na conveniência de prevenir vazios normativos. A lei tinha horror ao vácuo regulativo e, daí, a convenção coletiva só deixaria de vigorar se e quando surgisse uma nova convenção que ocupasse o seu lugar, substituindo-a.
