--- a/src/app/posts/34.md
+++ b/src/app/posts/34.md
@@ -6,6 +6,7 @@ author: 'Joana Neto'
 section: 'Contra-reforma laboral'
 ---
 
+![](/images/34.jpeg)
 
 A Agenda Trabalho XXI vende futuro, mas facilmente se percebe que é feita de passado. O anúncio do progresso aparece no embrulho, “flexibilidade”, “competitividade”, “conciliação”, proteção dos “mais vulneráveis”, “combate à precariedade laboral”. Quando se abre o pacote tudo muda: desregula e precariza. O resultado da combinação desses condimentos, usados no Código de 2003 e na Lei da Troika, a Lei n.°23/2012, de 25 de junho — cujo teor, alegadamente transitório, se tentou então justificar com a crise — deixou marcas profundas de precariedade na sociedade portuguesa.
 Com a nova proposta, são introduzidas alterações gravosas, designadamente as que dificultam a conciliação e as que desprotegem os grupos mais vulneráveis. Medidas que, inclusivamente, não estão em linha com o Direito da União Europeia. Há propostas sustentadas numa lógica da suspeição: sobre as mães a amamentar, sobre as mães trabalhadoras que pedem horário flexível, as mulheres trabalhadoras que alegadamente abusam dos seus direitos. Acena-se com a suposta fraude para se retirar direitos.
