--- a/src/app/posts/35.md
+++ b/src/app/posts/35.md
@@ -6,6 +6,8 @@ author: 'Ulisses Garrido'
 section: 'Contra-reforma laboral'
 ---
 
+![](/images/35.jpeg)
+
 Não tem sido dos aspetos mais debatidos, mas por isso mesmo sinto o dever de fazer este alerta, a propósito de uma das medidas constantes da proposta recentemente apresentada pelo Governo para a lei laboral: cortar para metade as horas obrigatórias de formação dos trabalhadores em pequenas e médias empresas.
 Imaginem bem esta cena: Fernanda, operária têxtil em Guimarães, fez horas extra para pagar um curso de robótica. Sonha sair da linha de produção e ser técnica de manutenção. Ela propôs à empresa essa ou outra formação qualificante semelhante, mas o patrão nunca a formou — a empresa poupou o quê? 500, ou 1000 euros num ano? Pois, mas ignorou as 40 horas de formação obrigatória que a lei prevê, e ninguém o incomodou por isso, anos a fio. Agora, o Governo quer que empresas como esta reduzam ainda mais a formação. Fernanda vê anúncios: "Precisa-se trabalhador/a qualificado para indústria 4.0". E pergunta: "E eu, que estou aqui há 10 anos, não mereço ser qualificada?"
 Mas não é só. Raquel, 42 anos, trabalha há 15 anos numa confeção têxtil perto da Fernanda, de quem é vizinha. Uma máquina de corte laser chegou há dois anos, mas ninguém a formou para trabalhar com ela. Agora, a empresa contratou um técnico por 1.800€/mês. Raquel continua a cortar tecido manualmente, a ganhar 820€. Quando pergunta sobre formação, o patrão responde: "O Governo vai acabar com isso, já não vale a pena investir."
