--- a/src/app/posts/37.md
+++ b/src/app/posts/37.md
@@ -6,6 +6,7 @@ author: 'João Leal Amado'
 section: 'Contra-reforma laboral'
 ---
 
+![](/images/37.jpeg)
 
 A Constituição consagra, no seu art. 53.º, a garantia da segurança no emprego, com a correlativa proibição dos despedimentos sem justa causa. Aquela é uma garantia de primeira linha, sujeita ao regime privilegiado dos direitos, liberdades e garantias, da qual resulta, inequivocamente, que, em matéria laboral, a regra é – deve ser, não pode deixar de ser – a do contrato por tempo indeterminado, isto é, sem termo. Para a nossa ordem jurídica, o contrato a prazo só pode ser admitido em situações excecionais, em que exista uma necessidade de trabalho meramente temporária na empresa, a satisfazer, justamente, através da contratação a prazo de trabalhadores (substituição de trabalhador doente, atividade sazonal, acréscimo excecional de atividade da empresa, etc.). 
 Ora, a Agenda Trabalho XXI propõe-se romper com o caráter desviante assumido, entre nós, pelo contrato a prazo, sobretudo quando vem estabelecer, em moldes inovadores, que poderá vir a ser celebrado contrato de trabalho a termo certo, com duração máxima de dois anos, sempre que se trate da «contratação de trabalhador que nunca tenha prestado atividade ao abrigo de contrato de trabalho por tempo indeterminado» (nova redação proposta para o art. 140.º, n.º 4, al. b). Ou seja, segundo esta proposta, a circunstância de um trabalhador nunca antes ter sido titular de um contrato de trabalho standard, sem termo, legitima que se perpetue a precariedade laboral desse mesmo trabalhador, que poderá ir sendo contratado, sucessivamente, por diversos empregadores, sempre a prazo, mesmo que para satisfazer necessidades de trabalho permanentes das empresas em que for laborando. Contanto que nenhum empregador o macule, contratando-o sem termo, este trabalhador transforma-se num permanente candidato a ser contratado a prazo, com a descarada conivência da lei. Pode começar a trabalhar aos 20 anos, através de um contrato a prazo, e pode terminar a sua carreira (?) já sexagenário, tendo sido sempre e só contratado a prazo, por uma ou duas dúzias de empregadores, ao longo de décadas. É uma nova categoria criada pela Agenda Trabalho XXI, esta de um trabalhador sempre casto e virgem, pronto a ser recontratado a prazo, mesmo depois de ter tido antes relações laborais com uma ou duas dúzias de empregadores! Ponto é, claro, que nenhum lhe retire essa virgindade, mantendo com ele uma relação contratual por tempo indeterminado.
