--- a/src/app/posts/35.md
+++ b/src/app/posts/35.md
@@ -6,7 +6,7 @@ author: 'Ulisses Garrido'
 section: 'Contra-reforma laboral'
 ---
 
-![](/images/35.jpeg)
+![](/images/formacao.jpg)
 
 Não tem sido dos aspetos mais debatidos, mas por isso mesmo sinto o dever de fazer este alerta, a propósito de uma das medidas constantes da proposta recentemente apresentada pelo Governo para a lei laboral: cortar para metade as horas obrigatórias de formação dos trabalhadores em pequenas e médias empresas.
 
@@ -34,3 +34,5 @@ Com esta política, não se estagna a fuga de cérebros, mas aprofunda-se um evi
 A UGT já deu um rotundo não à proposta do Governo e a CGTP já a classificou como um assalto aos direitos dos trabalhadores que é preciso derrotar.  Não basta. É preciso afirmar as propostas necessárias, positivas, capazes de gerar progresso. Por exemplo, passando das 40h atuais  de formação, não para as 20h propostas , mas para um mínimo de 60h. Reforçando a fiscalização pela ACT, com multas pesadas para incumpridores e financiamento público adequado para quem invista na formação, reforçando o papel do IEFP e da negociação coletiva, que deve ligar a formação certificada a impactos nas carreiras.
 
 A redução da formação não é "modernização", é a consagração de um modelo de desenvolvimento falhado, que privilegia o lucro imediato das empresas em detrimento da qualificação e valorização do trabalho, da responsabilidade social das empresas e da justiça social. É, pois, justo exigir ao Governo que retire esta proposta e priorize, de facto, um "Trabalho XXI" que dignifique os trabalhadores portugueses. Portugal precisa de mais.  
+
+*Texto publicado originalmente no jornal Público, 11 de agosto de 2025*
