--- a/src/app/posts/34.md
+++ b/src/app/posts/34.md
@@ -6,7 +6,7 @@ author: 'Joana Neto'
 section: 'Contra-reforma laboral'
 ---
 
-![](/images/37.jpeg)
+![](/images/35.jpeg)
 
 A Agenda Trabalho XXI vende futuro, mas facilmente se percebe que é feita de passado. O anúncio do progresso aparece no embrulho, “flexibilidade”, “competitividade”, “conciliação”, proteção dos “mais vulneráveis”, “combate à precariedade laboral”. Quando se abre o pacote tudo muda: desregula e precariza. O resultado da combinação desses condimentos, usados no Código de 2003 e na Lei da Troika, a Lei n.°23/2012, de 25 de junho — cujo teor, alegadamente transitório, se tentou então justificar com a crise — deixou marcas profundas de precariedade na sociedade portuguesa.
 
@@ -20,3 +20,4 @@ Das muitas medidas que foram sendo discutidas, algumas passaram ao lado no debat
 
 Mete-se o antigo Código numa mala de cartão, qual Linda de Suza (afinal somos todos filhos de emigrantes), e parte-se. Querem-nos dizer que o Direito do Trabalho é velho. Mas não há nada mais carregado de futuro do que trabalho digno. É por isso que, no que toca a esta Contra-Reforma, só podemos dizer: "Não". E não, tem de ser mesmo não. Para variar.
 
+*Texto publicado originalmente no jornal Público, 9 de agosto de 2025*
