--- a/src/app/posts/36.md
+++ b/src/app/posts/36.md
@@ -5,7 +5,7 @@ date: '2025-08-17'
 author: 'João Leal Amado'
 section: 'Contra-reforma laboral'
 ---
-![](/images/36.jpeg)
+![Autor: Adriano Miranda/ Público](/images/amado.jpeg)
 
 Em matéria de despedimento, o princípio geral consagrado no atual Código do Trabalho continua a ser aquele que foi acolhido no nosso país após a Revolução de Abril e a Constituição da República: ao declarar o despedimento ilícito, o tribunal priva este último do seu efeito extintivo da relação laboral, pelo que, tendencialmente, tudo se vai passar como se o despedimento jamais tivesse sido proferido pela entidade empregadora. E, em conformidade com esta lógica de fundo, o trabalhador tem o direito de retomar a sua atividade profissional ao abrigo de um contrato de trabalho que, afinal, ao invés daquilo que o empregador pretendia, não foi dissolvido pelo despedimento inválido.
 A consagração de uma tutela de tipo reintegratório ou restitutório entende se e é a única que, ao menos como solução regra, se mostra compatível com a garantia da segurança no emprego, consagrada no art. 53.º da Constituição. Qualquer outro sistema, em que a tutela da estabilidade do emprego fosse como que amolecida, assentando em mecanismos puramente indemnizatórios – sistema do despedimento pago –, ficaria, decerto, aquém das exigências constitucionais. Como lapidarmente escrevem Gomes Canotilho e Jorge Leite, “se o ato que extingue o contrato [o despedimento] vem, afinal, a revelar se anti jurídico, a única reação adequada do ordenamento jurídico compatível com o sistema da estabilidade é a de privar aquele ato da sua consequência normal, determinando a sua invalidade e consequente subsistência do vínculo contratual. A monetarização do despedimento como alternativa à reintegração permitiria, afinal, à entidade empregadora aquilo que a CRP quer, manifestamente, proibir – desembaraçar se do trabalhador apesar de não haver causa legítima de despedimento”.
@@ -22,3 +22,5 @@ Para quê isto? Para reforçar os poderes patronais, numa relação já de si de
 Neste campo do despedimento ilícito, a nossa ordem jurídica não deve ser mole ou condescendente, antes deve ser rigorosa e vigorosa. Se o trabalhador for ilegalmente expulso da empresa onde exerce a sua atividade profissional e se o tribunal reconhecer a invalidade da decisão patronal, o que se pede às leis do trabalho é que permitam que o trabalhador, se assim o desejar, regresse à empresa da qual foi ilicitamente afastado e retome o exercício da sua atividade. Também por esta via se defende a dignidade de quem trabalha – no caso, a dignidade de quem, estando a trabalhar, é alvo de uma decisão de despedimento. Decisão esta ilegítima, que, todavia, o exclui do ambiente de trabalho, o priva do seu emprego e do correspondente salário, o impede de continuar a exercer a sua atividade profissional. E pretendem agora que o trabalhador vitimado por esse despedimento ilícito não tenha o direito potestativo de voltar? Qualquer que seja a dimensão da empresa em causa e qualquer que seja a função por ele exercida?
 
 Em suma, um simulacro de segurança no emprego, a segurança no emprego a ser sacrificada no altar das conveniências empresariais. Uma solução que traduz uma opção ideológica de quem governa, legítima em si mesma, mas incompatível com a pauta de valores consagrada na nossa Constituição. E, por isso, juridicamente inadmissível.
+
+*Texto publicado originalmente no jornal Público, 13 de agosto de 2025*
