--- a/src/app/posts/35.md
+++ b/src/app/posts/35.md
@@ -6,7 +6,7 @@ author: 'Ulisses Garrido'
 section: 'Contra-reforma laboral'
 ---
 
-![](/images/formacao.jpg)
+![Créditos: Drazen Zigic](/images/formacao.jpg)
 
 Não tem sido dos aspetos mais debatidos, mas por isso mesmo sinto o dever de fazer este alerta, a propósito de uma das medidas constantes da proposta recentemente apresentada pelo Governo para a lei laboral: cortar para metade as horas obrigatórias de formação dos trabalhadores em pequenas e médias empresas.
 
