--- a/src/app/posts/37.md
+++ b/src/app/posts/37.md
@@ -6,7 +6,7 @@ author: 'João Leal Amado'
 section: 'Contra-reforma laboral'
 ---
 
-![](/images/37.jpeg)
+![Créditos: José Soeiro](/images/37.jpeg)
 
 A Constituição consagra, no seu art. 53.º, a garantia da segurança no emprego, com a correlativa proibição dos despedimentos sem justa causa. Aquela é uma garantia de primeira linha, sujeita ao regime privilegiado dos direitos, liberdades e garantias, da qual resulta, inequivocamente, que, em matéria laboral, a regra é – deve ser, não pode deixar de ser – a do contrato por tempo indeterminado, isto é, sem termo. Para a nossa ordem jurídica, o contrato a prazo só pode ser admitido em situações excecionais, em que exista uma necessidade de trabalho meramente temporária na empresa, a satisfazer, justamente, através da contratação a prazo de trabalhadores (substituição de trabalhador doente, atividade sazonal, acréscimo excecional de atividade da empresa, etc.). 
 
