--- a/src/app/posts/38.md
+++ b/src/app/posts/38.md
@@ -6,7 +6,7 @@ author: 'Paulo Pedroso'
 section: 'Contra-reforma laboral'
 ---
 
-![](/images/38.jpeg)
+![Créditos: José Soeiro](/images/38.jpeg)
 
 Desde a mudança de paradigma ocorrida com a aprovação do Código de Trabalho em 2003, os governos têm privilegiado mudanças graduais na legislação laboral, muito frequentemente acordadas na concertação social. Mesmo assim, têm sido recorrentemente criticados pelas reformas introduzidas, em nome da defesa da estabilidade do estatuído.
 
