--- a/src/app/posts/34.md
+++ b/src/app/posts/34.md
@@ -6,7 +6,7 @@ author: 'Joana Neto'
 section: 'Contra-reforma laboral'
 ---
 
-![Créditos: José Soeiro](/images/joana_neto.jpg)
+![](/images/joana_neto.jpg)
 
 A Agenda Trabalho XXI vende futuro, mas facilmente se percebe que é feita de passado. O anúncio do progresso aparece no embrulho, “flexibilidade”, “competitividade”, “conciliação”, proteção dos “mais vulneráveis”, “combate à precariedade laboral”. Quando se abre o pacote tudo muda: desregula e precariza. O resultado da combinação desses condimentos, usados no Código de 2003 e na Lei da Troika, a Lei n.°23/2012, de 25 de junho — cujo teor, alegadamente transitório, se tentou então justificar com a crise — deixou marcas profundas de precariedade na sociedade portuguesa.
 
