--- a/src/app/posts/40.md
+++ b/src/app/posts/40.md
@@ -20,4 +20,4 @@ O atrofiamento da negociação coletiva prossegue com a eliminação de alguns m
 
 O liberalismo económico e a conceção fascista de que os trabalhadores são seres suspeitos encontram eco no Parlamento. É urgente o combate às bases estruturais das desigualdades, pelo trabalho digno e por condições para a conciliação entre a vida profissional e a vida pessoal e familiar.
 
-*Texto publico originalmente no Jornal de Notícias, 2 de agosto de 2025*
+*Texto publicado originalmente no Jornal de Notícias, 2 de agosto de 2025*
