--- a/src/app/posts/41.md
+++ b/src/app/posts/41.md
@@ -24,3 +24,5 @@ Após impulso do sindicato do setor, em fevereiro passado a ACT intimou a Fideli
 Estes são apenas três exemplos da proposta do Governo que arrasa alguns dos avanços, que, em 2023, tornaram a lei laboral um pouco menos desequilibrada, mesmo que não a tenham expurgado de muitas das regras que continuaram a favorecer o poder dos empregadores. Ironicamente chamada “Trabalho XXI”, a proposta de lei do governo introduz muitas outras regressões graves, como tem sido assinalado por sindicatos e juristas, todas em favor do lado mais forte desta relação. Nos contratos a prazo, passa a ser possível contratar precariamente para funções permanentes, bastando fundamentar o contrato a prazo no facto de o trabalhador nunca ter tido um contrato sem termo - criando-se assim a figura do “eterno precário”, como bem assinalou João Leal Amado, noutro jornal. O banco de horas individual regressa, permitindo jornadas de 10 horas sem pagamento como trabalho suplementar, num regime que passa a ser decidido pela empresa, bastando o assentimento individual do trabalhador, sem qualquer intermediação coletiva. Nos créditos laborais, prevê-se que o trabalhador pode renunciar aos valores que lhe são devidos pela empresa (de salários em falta, ou de férias, por exemplo), com mera assinatura de uma declaração, tornando possível abdicar, sob chantagem, de valores devidos pelo empregador (a referência governamental à necessidade de um notário no processo é apenas risível). Nos despedimentos, elimina-se a obrigação geral de reintegração em caso de despedimento ilícito, abrindo caminho para que Portugal passe a ter, na prática e em choque frontal com a Constituição, um regime de despedimento livre desde que a empresa pague. No caso dos pais e mães trabalhadoras, passa a obrigar-se ao trabalho ao fim de semana ou à noite no âmbito do horário flexível (se esse horário fizer parte da atividade da empresa) e, como tem sido amplamente debatido, limita-se a licença de amamentação e burocratiza-se o seu exercício, a partir de uma estigmatização sem qualquer base em dados concretos. No caso do teletrabalho e do trabalho suplementar, elimina-se a proteção do princípio do tratamento mais favorável, permitindo negociar para estas matérias regras abaixo da lei geral...
 
 Talvez nunca, em 50 anos, um governo tenha tentado impor tamanho desequilíbrio do direito do trabalho. Trata-se, na realidade, de um novo Código do Trabalho, violentamente liberal, à medida e até indo além das reivindicações patronais, que desvaloriza profundamente o trabalho e que impõe uma verdadeira desconsideração pela pessoa do trabalhador em inúmeras matérias centrais. Não tenho dúvidas de que, por várias vias, esta proposta tem de ser derrotada. Nalguns casos, como nos despedimentos, o mais certo é cair por inconstitucionalidade. Noutros, como nas plataformas, por chocar com diretivas europeias. Haverá casos em que já se sabe não haver qualquer maioria parlamentar de suporte (como no luto gestacional). Mas acima de tudo, a ofensiva deve ser repelida pela indignação e mobilização coletivas. Há muito a melhorar na lei do trabalho? Com certeza. Em velhas questões, como o tempo do trabalho, a precariedade ou o salário, e em novas, como a digitalização, a gestão algorítmica ou o trabalho sob condições climáticas extremas. Mas impedir esta contra-reforma laboral é a primeira condição para que isso seja feito.
+
+*Texto publicado originalmente no Expresso, 19 de agosto de 2025*
