--- a/src/app/posts/45.md
+++ b/src/app/posts/45.md
@@ -6,7 +6,7 @@ author:
 section: 'Contra-reforma laboral'
 ---
 
-![](/images/apelo.jpeg)
+![](/images/apelo.jpg)
 
 A democracia nascida com o 25 de Abril está hum sobressalto sem paralelo. Assistimos ao crescimento das forças de extrema-direita e populistas, tanto no Parlamento como na sociedade e o Governo prepara uma contrarreforma laboral profundamente lesiva dos direitos dos trabalhadores.
 Neste contexto, torna-se urgente e inadiável que os trabalhadores e o movimento sindical, fazendo jus à sua história, se unam para a resistência e defesa dos interesses de quem trabalha.
