--- a/src/app/posts/45.md
+++ b/src/app/posts/45.md
@@ -15,7 +15,7 @@ A CGTP-IN já assumiu uma posição de total oposição e a UGT já declarou o s
 É preciso encontrar compromissos de ação convergente, no respeito pela autonomia de cada organização, e a coordenação estratégica entre as centrais, face aos desafios que já se apresentam.
 É este o apelo que fazemos às duas centrais sindicais para que,  em nome da defesa dos direitos laborais e da dignidade do trabalho, iniciem um processo de entendimento que permita uma resposta eficaz à contrarreforma laboral. 
 
-Primeiros subscritores
+# Primeiros subscritores
 
 António Brandão Guedes - Sindicalista do setor Função Pública, dirigente da Base - FUT
 Augusta de Sousa - Sindicalista, ex-Bastonária da Ordem dos Enfermeiros e ex-dirigente JOC.
