--- a/src/app/posts/46.md
+++ b/src/app/posts/46.md
@@ -6,7 +6,7 @@ author: João Leal Amado
 section: 'Contra-reforma laboral'
 ---
 
-![](/images/grevegeral.jpg)
+![Créditos: Paulete Matos](/images/grevegeral.jpg)
 
 A greve consiste num direito fundamental dos trabalhadores, consagrado no art. 57.º da Constituição da República Portuguesa (CRP). Mas não se trata de um direito absoluto ou ilimitado, que sobre todos os outros deva prevalecer e todos os outros deva sacrificar ou esmagar. A CRP é inequívoca quanto a este ponto, lendo-se no n.º 3 do mesmo art. 57.º que a lei define as condições de prestação, durante a greve, de serviços mínimos indispensáveis para ocorrer à satisfação de necessidades sociais impreteríveis.
 
